crates/rattler_lock/src/snapshots/rattler_lock__test__v7__conda-path-lock.yml.snap
---
source: crates/rattler_lock/src/lib.rs
expression: conda_lock
---
version: 7
platforms:
  - name: linux-64-foobar
    subdir: linux-64
    virtual-packages:
      - __libc >= 32
  - name: win-64
environments:
  default:
    channels:
      - url: "https://conda.anaconda.org/conda-forge/"
    packages:
      linux-64-foobar:
        - conda_source: "minimal-project[ac2e8eb3] @ ../minimal-project"
      win-64:
        - conda_source: "a-python-project[38b8d5ef] @ ../a-python-project"
        - conda_source: "b-python-project[cc8e28b0] @ ../a-python-project"
        - conda_source: "minimal-project[1877194c] @ ../minimal-project"
  second:
    channels:
      - url: "https://conda.anaconda.org/conda-forge/"
    packages:
      win-64:
        - conda_source: "minimal-project[24438904] @ ../minimal-project"
packages:
  - conda_source: "a-python-project[38b8d5ef] @ ../a-python-project"
    version: "0.1"
    build: py38
    subdir: noarch
    noarch: python
  - conda_source: "b-python-project[cc8e28b0] @ ../a-python-project"
    version: "0.1"
    build: h398123
    subdir: noarch
    noarch: python
  - conda_source: "minimal-project[1877194c] @ ../minimal-project"
    version: "0.1"
    build: first
    subdir: win-64
    depends:
      - __win
  - conda_source: "minimal-project[24438904] @ ../minimal-project"
    version: "0.1"
    build: second
    subdir: win-64
    depends:
      - __win
  - conda_source: "minimal-project[ac2e8eb3] @ ../minimal-project"
    version: "0.1"
    build: first
    subdir: linux-64
    depends:
      - __unix
