crates/rattler_lock/src/snapshots/rattler_lock__test__v7__conda-source-build-host-packages-lock.yml.snap
---
source: crates/rattler_lock/src/lib.rs
assertion_line: 959
expression: conda_lock
---
version: 7
platforms:
  - name: linux-64
environments:
  default:
    channels:
      - url: "https://conda.anaconda.org/conda-forge/"
    packages:
      linux-64:
        - conda: "https://conda.anaconda.org/conda-forge/linux-64/build-tool-1.0.0-h0.conda"
        - conda: "https://conda.anaconda.org/conda-forge/linux-64/host-lib-2.0.0-h0.conda"
        - conda_source: "my-package[12345678] @ ./my-package"
packages:
  - conda: "https://conda.anaconda.org/conda-forge/linux-64/build-tool-1.0.0-h0.conda"
  - conda: "https://conda.anaconda.org/conda-forge/linux-64/host-lib-2.0.0-h0.conda"
  - conda_source: "my-package[12345678] @ ./my-package"
    version: 0.1.0
    build: py_0
    subdir: noarch
    build_packages:
      - conda: "https://conda.anaconda.org/conda-forge/linux-64/build-tool-1.0.0-h0.conda"
    host_packages:
      - conda: "https://conda.anaconda.org/conda-forge/linux-64/host-lib-2.0.0-h0.conda"
