crates/rattler_lock/src/snapshots/rattler_lock__test__v7__duplicate_platform_definition.yml.snap
---
source: crates/rattler_lock/src/lib.rs
expression: error_message
---
"Duplicate platform name `DUPLICATE` found"
