crates/rattler_lock/src/snapshots/rattler_lock__test__v7__duplicate_platform_use.yml.snap
---
source: crates/rattler_lock/src/lib.rs
expression: error_message
---
"environments.default.packages: duplicate entry with key \"DUPLICATE\" at line 12 column 7"
