crates/rattler_lock/src/snapshots/rattler_lock__test__v7__invalid_platform.yml.snap
---
source: crates/rattler_lock/src/lib.rs
expression: error_message
---
No such file or directory (os error 2)
