crates/rattler_lock/src/snapshots/rattler_lock__test__v7__invalid_platform_name.yml.snap
---
source: crates/rattler_lock/src/lib.rs
expression: error_message
---
"Failed to parse 'linux 64 foobar' as a PlatformName"
