crates/rattler_lock/src/snapshots/rattler_lock__test__v7__invalid_platform_subdir.yml.snap
---
source: crates/rattler_lock/src/lib.rs
expression: error_message
---
"failed to parse ''linux-XX' is not a valid subdir name; it must be 'noarch' or '{os}-{arch}' with both parts consisting of lowercase ASCII letters and digits, at most 32 characters in total' as a Subdir"
