crates/rattler_lock/src/snapshots/rattler_lock__test__v7__missing_platform.yml.snap
---
source: crates/rattler_lock/src/lib.rs
expression: error_message
---
"Environment `default` is using an unregistered platform `UNKNOWN`"
