crates/rattler_lock/src/snapshots/rattler_lock__test__v7__multiple-source-packages-with-variants-lock.yml.snap
---
source: crates/rattler_lock/src/lib.rs
expression: conda_lock
---
version: 7
platforms:
  - name: linux-64
environments:
  default:
    channels:
      - url: "https://conda.anaconda.org/conda-forge/"
    packages:
      linux-64:
        - conda_source: "my-package[2a17d7b3] @ my-package-win"
        - conda_source: "my-package[bfd2b14c] @ my-package-linux"
packages:
  - conda_source: "my-package[2a17d7b3] @ my-package-win"
    version: 1.0.0
    subdir: noarch
    noarch: generic
    variants:
      python: "3.11"
      target_platform: win-64
    depends:
      - python >=3.8
    license: MIT
  - conda_source: "my-package[bfd2b14c] @ my-package-linux"
    version: 1.0.0
    subdir: noarch
    noarch: generic
    variants:
      python: "3.11"
      target_platform: linux-64
    depends:
      - python >=3.8
    license: MIT
