crates/rattler_lock/src/snapshots/rattler_lock__test__v7__multiple_source_package_different_name.lock.yml.snap
---
source: crates/rattler_lock/src/lib.rs
expression: conda_lock
---
version: 7
environments:
  default:
    channels:
      - url: "https://conda.anaconda.org/conda-forge/"
    packages:
      linux-64:
        - conda: my-package
          name: my-package
        - conda: my-package
          name: my-package-dev
packages:
  - conda: my-package
    name: my-package
    depends:
      - python >=3.8
    license: MIT
  - conda: my-package
    name: my-package-dev
    depends:
      - python >=3.8
    license: MIT
